--- a/app/templates/admin/my_base.html
+++ b/app/templates/admin/my_base.html
@@ -1,5 +1,21 @@
 {% extends 'admin/base.html' %} {% block head_tail %} {{ super() }}
 <meta name="csrf-token" content="{{ csrf_token }}" />
+<script>
+  // Set up CSRF token for AJAX requests
+  $.ajaxSetup({
+    beforeSend: function (xhr, settings) {
+      if (
+        !/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) &&
+        !this.crossDomain
+      ) {
+        xhr.setRequestHeader(
+          "X-CSRFToken",
+          $('meta[name="csrf-token"]').attr("content")
+        );
+      }
+    },
+  });
+</script>
 {% endblock %} {% block body %}
 <p>CSRF token: {{ csrf_token }}</p>
 {{ super() }} {% endblock %}
